fixes hamburger bar width on mobile

--- a/client/src/styles/navigation.sass
+++ b/client/src/styles/navigation.sass
@@ -9,6 +9,8 @@
     display: flex !important
     flex-direction: column !important
     align-items: space-evenly !important
+    @media #{$mobile}
+        width: 35vw
 
     .drawerBtn
         margin-top: 20px
